--- a/src/styles.css
+++ b/src/styles.css
@@ -51,7 +51,7 @@ background-color: #fff !important;
 }
 
 .cm-tooltip.cm-tooltip-autocomplete > ul{
-font-family: 'SF Mono Regular' !important;
+font-family: 'Hasklig' !important;
   font-size: small !important;
   padding: 0em;
   white-space: nowrap;
